Mon Mar 11 13:17:41 UTC 2013  Byron Harris  <harrisb@ociweb.com>

        * NEWS:
        * docs/Options.html:
        * orbsvcs/tests/ImplRepo/RestartServer/MessengerClient.cpp:

          Added AIX to systems not supporting -ORBForwardOnReplyClosedLimit.

Mon Mar 11 09:42:00 UTC 2013  Simon Massey  <simon dot massey at prismtech dot com>

        * tests/Bug_4097_Regression/Bug_4097_Regression.cpp:

        Missing main try/catch coverity fix.

Sun Mar 10 05:19:06 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Dynamic/client.cpp:
        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Static/client.cpp:

          Fix wchar compatibility.

Sat Mar  9 19:08:55 UTC 2013  Phil Mesnier  <mesnier_p@ociweb.com>

        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Dynamic/run_test.pl:

          Fix the delay for the new test_4 client. It necessarily runs longer
          than the standard client timeout.

Sat Mar  9 16:31:33 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>

        * orbsvcs/orbsvcs/Naming/FaultTolerant/FT_Naming_Server.cpp:

          Use .in() to avoid warning for implicit conversion of _var.

        * orbsvcs/tests/FT_Naming/FaultTolerant/client.cpp:

          Use .in() to avoid warning for implicit conversion of _var.

        * orbsvcs/tests/FT_Naming/FaultTolerant/server.cpp:

          Removed code that removed a servant. Was causing a race condition
          on some platforms between getting the location strings and then
          iterating through them on the client. In some instances the client
          saw the member in the list right before it was removed. Removal is
          already tested elsewhere.

        * tao/Storable_Factory.h:

          Added include of an ace header to ensure that ACE_LACKS_PRAGMA_ONCE
          was defined.

        * tests/Dynamic_TP/POA_Loader/Dynamic_TP_POA_Test_Dynamic/client.cpp: