@@ -1,3 +1,10 @@
+Mon Mar 11 13:33:14 UTC 2013  Kevin Stanley  <stanleyk@ociweb.com>
+
+        * orbsvcs/tests/FT_Naming/FaultTolerant/client.cpp:
+
+          Added sleep in test after first failure to allow time for the
+          replication to happen between redundant servers.
+
 Mon Mar 11 13:17:41 UTC 2013  Byron Harris  <harrisb@ociweb.com>
 
         * NEWS:
